--- a/appinfo.json
+++ b/appinfo.json
@@ -1,7 +1,7 @@
 {
     "appKeys": {},
     "capabilities": [
-        ""
+        "configurable"
     ],
     "companyName": "DJ Levine",
     "longName": "Pebble Path Schedule",
