--- a/appinfo.json
+++ b/appinfo.json
@@ -3,7 +3,7 @@
     "capabilities": [
         ""
     ],
-    "companyName": "DJ Levine",
+    "companyName": "DLevine.us",
     "longName": "Pebble Path Schedule",
     "projectType": "pebblejs",
     "resources": {
@@ -11,17 +11,17 @@
             {
                 "file": "images/menu_icon.png",
                 "name": "IMAGE_MENU_ICON",
-                "type": "png"
+                "type": "bitmap"
             },
             {
                 "file": "images/logo_splash.png",
                 "name": "IMAGE_LOGO_SPLASH",
-                "type": "png"
+                "type": "bitmap"
             },
             {
                 "file": "images/tile_splash.png",
                 "name": "IMAGE_TILE_SPLASH",
-                "type": "png"
+                "type": "bitmap"
             },
             {
                 "file": "fonts/UbuntuMono-Regular.ttf",
@@ -32,15 +32,18 @@
                 "file": "images/PATHicon.png",
                 "menuIcon": true,
                 "name": "IMAGES_PATHICON_PNG",
-                "type": "png"
+                "type": "bitmap"
             }
         ]
     },
     "sdkVersion": "3",
     "shortName": "PebblePath",
+    "targetPlatforms": [
+        "basalt"
+    ],
     "uuid": "516528ed-b3e2-456e-a1e4-1bc06571f231",
     "versionCode": 1,
-    "versionLabel": "1.0",
+    "versionLabel": "1.1",
     "watchapp": {
         "hiddenApp": false,
         "watchface": false
