Initial Commit of New Interface
- Testing a simpler interface
-- Fewer clicks to reach the information you need
-- Preparing to remove remote server dependence

--- a/appinfo.json
+++ b/appinfo.json
@@ -39,7 +39,9 @@
     "sdkVersion": "3",
     "shortName": "PebblePath",
     "targetPlatforms": [
-        "basalt"
+        "aplite",
+        "basalt",
+        "chalk"
     ],
     "uuid": "516528ed-b3e2-456e-a1e4-1bc06571f231",
     "versionCode": 1,
