--- a/appinfo.json
+++ b/appinfo.json
@@ -39,11 +39,13 @@
     "sdkVersion": "3",
     "shortName": "PebblePath",
     "targetPlatforms": [
-        "basalt"
+        "aplite",
+        "basalt",
+        "chalk"
     ],
     "uuid": "516528ed-b3e2-456e-a1e4-1bc06571f231",
     "versionCode": 1,
-    "versionLabel": "0.5",
+    "versionLabel": "0.7",
     "watchapp": {
         "hiddenApp": false,
         "watchface": false
